install/kubernetes/istio-config.yaml
# GENERATED FILE. Use with Kubernetes 1.7+
# TO UPDATE, modify files in install/kubernetes/templates and run install/updateVersion.sh
#Istio Configuration file
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
