install/kubernetes/istio-initializer.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: istio-initializer
  namespace: istio-system
  annotations:
    sidecar.istio.io/inject: "false"
  initializers:
    pending: []
  labels:
    istio: istio-initializer
spec:
  replicas: 1
  template:
    metadata:
      name: istio-initializer
      labels:
        istio: initializer
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istio-initializer-service-account
      containers:
        - name: initializer
          image: gcr.io/istio-testing/sidecar_initializer:3101ea9d82a5f83b699c2d3245b371a19fa6bef4
          imagePullPolicy: IfNotPresent
          args:
            - --port=8083
            - --namespace=istio-system
            - -log_output_level=info
          volumeMounts:
          - name: config-volume
            mountPath: /etc/istio/config
      volumes:
      - name: config-volume
        configMap:
          name: istio
---
