install/kubernetes/istio-sidecar-initializer.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: istio-sidecar-initializer
  namespace: istio-system
  annotations:
    sidecar.istio.io/inject: "false"
  initializers:
    pending: []
  labels:
    istio: istio-sidecar-initializer
spec:
  replicas: 1
  template:
    metadata:
      name: istio-sidecar-initializer
      labels:
        istio: sidecar-initializer
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: istio-sidecar-initializer-service-account
      containers:
        - name: sidecar-initializer
          image: gcr.io/istio-testing/sidecar_initializer:5acaa9e26e7d9b239cbc72da63f5f9a3dac5a54e
          imagePullPolicy: IfNotPresent
          args:
            - --port=8083
            - --namespace=istio-system
            - -v=2
          volumeMounts:
          - name: config-volume
            mountPath: /etc/istio/config
      volumes:
      - name: config-volume
        configMap:
          name: istio
